[gd_scene load_steps=5 format=3 uid="uid://xlnnyevnltm"]

[ext_resource type="Script" uid="uid://djfmxpw7hl65n" path="res://scripts/ui/map_selector.gd" id="1_map_selector"]
[ext_resource type="FontFile" uid="uid://du5n2h313xgwm" path="res://assets/ui/kenny/fonts/Kenney Future Narrow.ttf" id="2_font_narrow"]
[ext_resource type="Texture2D" uid="uid://trnteubyptxo" path="res://assets/ui/kenny/button_rectangle_depth_flat.png" id="3_button_flat"]
[ext_resource type="Texture2D" uid="uid://b5enunnwcrptf" path="res://assets/ui/kenny/button_rectangle_depth_gradient.png" id="4_button_pressed"]

[node name="MapSelector" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_map_selector")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.85)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -400.0
offset_right = 640.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font_narrow")
theme_override_font_sizes/font_size = 40
text = "SELECT MAP"
horizontal_alignment = 1

[node name="MapsScrollContainer" type="ScrollContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.4

[node name="MapGrid" type="GridContainer" parent="Panel/VBoxContainer/MapsScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 2

[node name="DetailsPanel" type="Panel" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.6

[node name="DetailsContainer" type="HBoxContainer" parent="Panel/VBoxContainer/DetailsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 15.0
offset_right = -15.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="PreviewPanel" type="Panel" parent="Panel/VBoxContainer/DetailsPanel/DetailsContainer"]
custom_minimum_size = Vector2(480, 0)
layout_mode = 2

[node name="PreviewRect" type="TextureRect" parent="Panel/VBoxContainer/DetailsPanel/DetailsContainer/PreviewPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="NoPreviewLabel" type="Label" parent="Panel/VBoxContainer/DetailsPanel/DetailsContainer/PreviewPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -14.0
offset_right = 100.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_font_narrow")
theme_override_font_sizes/font_size = 20
text = "Select a map to see preview"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="InfoPanel" type="VBoxContainer" parent="Panel/VBoxContainer/DetailsPanel/DetailsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15

[node name="MapNameLabel" type="Label" parent="Panel/VBoxContainer/DetailsPanel/DetailsContainer/InfoPanel"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font_narrow")
theme_override_font_sizes/font_size = 32
text = "Select a Map"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer/DetailsPanel/DetailsContainer/InfoPanel"]
layout_mode = 2

[node name="DifficultyLabel" type="Label" parent="Panel/VBoxContainer/DetailsPanel/DetailsContainer/InfoPanel"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font_narrow")
theme_override_font_sizes/font_size = 20
text = "Difficulty: ☆☆☆☆☆"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="Panel/VBoxContainer/DetailsPanel/DetailsContainer/InfoPanel"]
layout_mode = 2

[node name="DescriptionLabel" type="Label" parent="Panel/VBoxContainer/DetailsPanel/DetailsContainer/InfoPanel"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_font_narrow")
theme_override_font_sizes/font_size = 18
text = "Select a map from the list above to see details."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="ButtonsContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="BackButton" type="TextureButton" parent="Panel/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
texture_normal = ExtResource("3_button_flat")
texture_pressed = ExtResource("4_button_pressed")
stretch_mode = 0

[node name="Label" type="Label" parent="Panel/VBoxContainer/ButtonsContainer/BackButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_font_narrow")
theme_override_font_sizes/font_size = 24
text = "BACK"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SelectButton" type="TextureButton" parent="Panel/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
disabled = true
texture_normal = ExtResource("3_button_flat")
texture_pressed = ExtResource("4_button_pressed")
stretch_mode = 0

[node name="Label" type="Label" parent="Panel/VBoxContainer/ButtonsContainer/SelectButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_font_narrow")
theme_override_font_sizes/font_size = 24
text = "START GAME"
horizontal_alignment = 1
vertical_alignment = 1
